# Metis

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/eval/: README.md  compare_model_correctness.py  eval_openai_tool_agent.py  prepare_hf_vlm_jsonl.py  run_qwen_vs_metis_eval.sh  sample_eval.jsonl  validate_eval_data.py
examples/train/: start_tool_server.sh  train_metis.sh
verl/verl/model_merger/: base_model_merger.py
verl/verl/trainer/: main_generation_server.py
verl/verl/utils/dataset/: rl_dataset.py
verl/verl/workers/: fsdp_workers.py
verl/verl/workers/config/: actor.py
verl_tool/: README.md
verl_tool/agent_loop/: agent_loop.py  verltool_agent_loop.py  vision_process.py  vision_utils.py
verl_tool/servers/: README.md  serve.py
verl_tool/servers/tools/: metis.py  metis_code.py
verl_tool/servers/tools/utils/: deepsearch_utils.py  ipython_executor.py  search_engine.py  web_agent_utils.py
verl_tool/trainer/: main_ppo.py
verl_tool/trainer/config/actor/: actor.yaml
verl_tool/trainer/ppo/: core_algos.py  hdpo_algos.py  metric_util.py  ray_trainer.py  reward.py
verl_tool/workers/: hdpo_actor.py  hdpo_fsdp_worker.py
verl_tool/workers/reward_manager/: metis.py
